<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2010 Jesse Wilson
  ~ Copyright 2014 Prateek Srivastava (@f2prateek)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <LinearLayout
      android:orientation="vertical"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/holo_gap_large"
        android:layout_marginBottom="@dimen/holo_gap_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@android:style/TextAppearance.Medium"
        android:text="@string/welcome_message"
        android:gravity="center"
        android:layout_marginLeft="@dimen/holo_gap_large"
        android:layout_marginRight="@dimen/holo_gap_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/DialogHeaderText"
        android:text="@string/customize"/>

    <Switch
        android:id="@+id/notification_toggle"
        style="@style/ClickableDialogText"
        android:text="@string/notifications"
        tools:checked="true"
        android:drawableLeft="@drawable/ic_action_notification"/>

    <TextView
        android:id="@+id/color_header"
        style="@style/ClickableDialogText"
        android:text="@string/color"
        android:drawableLeft="@drawable/ic_action_picker"/>

    <com.larswerkman.holocolorpicker.ColorPicker
        android:id="@+id/color_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        style="@style/DialogHeaderText"
        android:text="@string/share_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle"
        android:layout_marginTop="@dimen/holo_gap"
        android:background="#181818">

      <TextView
          android:id="@+id/share"
          style="?android:buttonBarButtonStyle"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/share"
          android:fontFamily="sans-serif-light"
          android:drawableLeft="@drawable/ic_action_share"/>

      <TextView
          android:id="@+id/rate"
          style="?android:buttonBarButtonStyle"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/rate"
          android:fontFamily="sans-serif-light"
          android:drawableLeft="@drawable/ic_action_rate"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>